# voting-platform

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: keys.rs  lib.rs  msg.rs
contracts/distribution/: Cargo.toml
contracts/distribution/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/distribution/src/contract/: exec.rs  query.rs
contracts/membership/: Cargo.toml
contracts/membership/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/membership/src/contract/: exec.rs  query.rs  reply.rs
contracts/membership/src/multitest/: tests.rs
contracts/proposal/: Cargo.toml
contracts/proposal/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/proposal/src/contract/: exec.rs  reply.rs
contracts/proxy/: Cargo.toml
contracts/proxy/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/proxy/src/contract/: exec.rs  query.rs  reply.rs
